- Set initial design. - Add profile picture. - Add InfoCard widget. - Add url_launcher package.

--- a/web/index.html
+++ b/web/index.html
@@ -11,8 +11,8 @@
     Fore more details:
     https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
-    On production change to:
-    * <base href="/sign-form/" />
+    TODO: On production change to:
+    * <base href="/linkinbio/" />
   -->
   <base href="/">
 
