Add comment for hosting this page.

--- a/web/index.html
+++ b/web/index.html
@@ -11,8 +11,10 @@
     Fore more details:
     https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
-    TODO: On production change to:
-    * <base href="/linkinbio/" />
+    * For example when hosting:
+    * If using a subdomain like "username.github.io/linkinbio" change <base/> tag to:
+    <base href="/linkinbio/" />
+    * Else leave as default.
   -->
     <base href="/" />
 
